welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:8: error: value !=- is not a member of Int
	{if (x!=getMondeLargeur() || x!=-1)
                                      ^ZigZag:9: error: Boolean does not take parameters
			{if (monte())
                                  ^ZigZag:18: error: value ==- is not a member of Int
		else {if (x==-1)
                           ^